pamc/src/tests/sample_code/should_fail/type_check/labeled_match_case_params/undefined_param.ph
type Nat {
    .O: Nat,
    .S(_: Nat): Nat,
}

type Color {
    .C(~r: Nat, ~g: Nat, ~b: Nat): Color,
}

let _1 = Nat.S(Nat.O);
let white = Color.C(r: _1, g: _1, b: _1);

let _0 = match white {
    .C(:alpha, r: y, hue: x, ...) => Nat.O,
};
